--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <p class="title"><b>SCRMR:</b> ClAsSiC ScReAmEr FoR WeB</p>
         <a class="bookmark" href="javascript:(function(d,url){if(!window.Scrmr){var s=d.createElement('script'),h=d.head||d.getElementsByTagName('head')[0];s.src=url;h.appendChild(s)}})(document, '//scrmr.lxgreen.me/js/scrmr.min.js');"><img src="img/scrmr.png" alt="scrmr"/></a>
         <ul id="dragMessage">
-            <li><b>I</b> DrAg ThE ImaGe To ThE BooKMaRkS BaR</li>
+            <li><b>I</b> DrAg ThE ImaGe To ThE BooKMaRkS</li>
             <li><b>II</b> Go To AnY Web SiTe</li>
-            <li><b>III</b> cLiCk ThE SCRMR BooKMaRk</li>
+            <li><b>III</b> cLiCk SCRMR</li>
             <li><b>IV</b> ?????</li>
-            <li><b>V</b> Pr0fIt!!!!</li>
+            <li><b>V</b> Pr0fIt!</li>
         </ul>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="js/scrmr.jquery.min.js"></script>
