--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             callback : function(){
                 $("#dragMessage").find("li:first").css("color", "#5d030a").html("<b>I</b> SoRrY... TrY AgAiN");
         }
-        });
+        }).click(function(e){e.preventDefault(); return false;});
         </script>
     <![endif]>
 </body>
